<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_24"
    android:background="@color/primary_background"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/dp_32"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/logo"
            android:layout_marginRight="@dimen/dp_4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chatvia17"
            android:fontFamily="@font/public_sans_semi_bold"
            android:textSize="@dimen/sp_22"
            android:textColor="@color/primary_text"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/public_sans_semi_bold"
        android:text="@string/title_sign_in"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="@dimen/dp_8"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/public_sans_regular"
        android:text="@string/get_your_chatvia_account_now"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/secondary_text"
        android:layout_marginBottom="@dimen/dp_24"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_24">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:fontFamily="@font/public_sans_semi_bold"
            android:textSize="@dimen/sp_12"
            android:layout_marginBottom="@dimen/dp_8"
            />
        <EditText
            android:id="@+id/editText_emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:fontFamily="@font/public_sans_regular"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_12"
            android:drawableLeft="@drawable/ic_mail_line"
            android:drawablePadding="@dimen/dp_8"
            />
        <TextView
            android:id="@+id/textView_errEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/dp_8"
            />

        <TextView
            android:layout_marginTop="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:fontFamily="@font/public_sans_semi_bold"
            android:textSize="@dimen/sp_12"
            android:layout_marginBottom="@dimen/dp_8"
            />
        <EditText
            android:id="@+id/editText_userNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:fontFamily="@font/public_sans_regular"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_12"
            android:drawableLeft="@drawable/ic_user_2_line_off"
            android:drawablePadding="@dimen/dp_8"
            />
        <TextView
            android:id="@+id/textView_errUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/dp_8"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Password"
            android:fontFamily="@font/public_sans_semi_bold"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            />
        <EditText
            android:id="@+id/editText_passwordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:textSize="@dimen/sp_12"
            android:fontFamily="@font/public_sans_regular"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_2_line"
            android:drawablePadding="@dimen/dp_8"/>
        <TextView
            android:id="@+id/textView_errPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/dp_8"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/dp_24"
            android:id="@+id/btn_signup"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/sp_12"
            android:textAllCaps="false"
            android:textColor="#fff"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/sp_12"
            android:fontFamily="@font/public_sans_regular"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:fontFamily="@font/public_sans_regular"
            android:text="@string/signin"
            android:textColor="@color/primary_color"/>
    </LinearLayout>
</LinearLayout>