<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_background">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/nav_background"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dp_16">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="@dimen/dp_16"
            android:src="@drawable/ic_arrow_left_s_line" />

        <TextView
            android:id="@+id/textView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_semi_bold"
            android:text="@string/reset_password"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_14"
            android:gravity="center"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_32"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/dp_8"
            android:fontFamily="@font/public_sans_medium"
            android:text="@string/email"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <vn.hitu.ntb.widget.AppEditText
            android:id="@+id/editText_emailResetPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_marginBottom="@dimen/dp_16"
            android:drawableLeft="@drawable/ic_user_2_line_off"
            android:drawablePadding="@dimen/dp_8"
            android:hint="@string/mail_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_12" />
        <TextView
            android:id="@+id/textView_errEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:textColor="@color/red_text"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_below="@+id/editText_emailResetPw"
            />
        <Button
            android:id="@+id/btn_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="@dimen/sp_12"
            android:textAllCaps="false"
            android:layout_below="@+id/textView_errEmail"
            android:layout_alignParentEnd="true"
            android:background="@drawable/custom_button"/>

    </RelativeLayout>

</LinearLayout>